--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-06-25  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/Function.h: catch empty error messages
+        * inst/include/Rcpp/api/meat/Rcpp_eval.h: protect call
+
 2015-06-18  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/Attributes.R (evalCpp): Add support for plugings argument
