add 'updateChangeLog' utility function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2015-07-21  Kevin Ushey  <kevinushey@gmail.com>
 
+        * R/tools.R: add 'updateChangeLog()' utility function
         * inst/include/Rcpp/api/meat/Rcpp_eval.h: don't use 'CDDDR'
 
 2015-07-20  Dirk Eddelbuettel  <edd@debian.org>
