--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-08-05  Kevin Ushey  <kevinushey@gmail.com>
+
+        * src/api.cpp: use `_WIN32` instead of `WIN32`
+
 2015-08-02  Dirk Eddelbuettel  <edd@debian.org>
 
         * R/Attributes.R (sourceCpp): In no-rebuild-needed case, also set a
