--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-08-15  Florian Plaza Oñate <florian.plaza@jouy.inra.fr>
+        * inst/include/Rcpp/vector/Vector.h: Add 'at' methods which implement 
+        accessors with bounds cheking (pull request #342, fixes issue #341)
+        * inst/include/Rcpp/vector/Matrix.h: Ditto
+        * inst/unitTests/cpp/Vector.cpp: Add unit tests for at acessors
+        * inst/unitTests/cpp/Matrix.cpp: Ditto
+        * inst/unitTests/runit.Vector.R: Ditto
+        * inst/unitTests/runit.Matrix.R: Ditto
+
 2015-08-18  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/unitTests/runit.Module.client.package.R: Disabled for bad
