--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2017-04-11  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/inst/unitTests/testRcppClass/src/init.c (R_init_testRcppClass): Call
+        R_registerRoutines() and R_useDynamicSymbols(); also ensure
+        _rcpp_module_boot_* is registered for each module
+        * inst/unitTests/testRcppClass/NAMESPACE: Added registration
+
+        * inst/unitTests/testRcppClass/DESCRIPTION (Title): Title case
+
+        * inst/unitTests/testRcppClass/R/rcpp_hello_world.R (rcpp_hello_world):
+        Call the renamed C++ function
+        * inst/unitTests/testRcppClass/src/rcpp_hello_world.cpp (rcpp_hello_world_cpp):
+        Renamed C++ function to be distinct from R function calling it
+        * inst/unitTests/testRcppClass/src/rcpp_hello_world.h: Ditto
+        * inst/unitTests/testRcppClass/man/rcpp_hello_world.Rd: Alias renamed
+        C++ function
+
 2017-04-09  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/unitTests/testRcppModule/src/init.c (R_init_testRcppModule): Call
