--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2017-04-17  James J Balamuta  <balamut2@illinois.edu>
 
-        * inst/include/Rcpp/exceptions.h: modified exceptions macros to support
+        * inst/include/Rcpp/Rcpp/exceptions/cpp11/exceptions.h: Removed
+        semicolons from RCPP_ADVANCED_EXCEPTION_CLASS to quiet 'extra ;' -Wpedantic
+
+        * inst/include/Rcpp/exceptions.h: Modified exceptions macros to support
         a default string and removed generated stop, warning from file.
         * inst/include/Rcpp/Rcpp/exceptions/cpp98/exceptions.h: Contains
         generated RCPP_ADVANCED_EXCEPTION_CLASS macro, stop & warning.
