--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-04-25  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/Attributes.R (.plugins[["cpp11"]]): If R 3.4.0 or newer is used, set
+        USE_CXX11 (instead of the older USE_CXX1X)
+
 2017-04-22  Nathan Russell  <russell.nr2012@gmail.com>
 
         * inst/include/Rcpp/sugar/functions/strings/trimws.h: Added sugar
